--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,24 @@
+[8.4.0]
+
+[Bugs]
+- Fixed CTD on Linux (Case sensitivity _LG ships).
+- Fixed CTD when certain planets deciv or doesn't exist.
+
+[Improvements]
+- Improved the beam effect, overload sound effect, and description of the Ship Cracker (Built in on Catalyst class).
+- Improved performance of Quantum Cascade.
+- Ship cracker now benefits from energy weapon flux cost reduction effects.
+- Added Rosalina-spec BP icon.
+
+[Campaign]
+- Added the Rosalina-spec prototype market (requires 50 or more rep with rosalina).
+
+[Misc]
+- Fixed the main menu banner getting stretched on non-16:9 aspect ratio displays.
+- Added main menu banner settings via Lunalib (Lunalib is not required to run Stinger Shipyards, but if you have it you can config).
+
+[8.3.0]
+
 [Ships]
 - Puppy-class Frigate
 	- Now leaves a phase jitter on every phase skim instead of just one.
@@ -11,8 +32,8 @@
 [Campaign]
 
 - Commissioned players can now obtain Rosalina and the Godmother as contacts.
-	- Rosalina: Requires a commission and 20+ relations.
-	- Euterpe: Requires a commission and 50+ relations.
+	- Rosalina: Requires a commission and 20+ relations. Very high science and trade contact.
+	- Euterpe: Requires a commission and 50+ relations. Very high military and underworld contact.
 
 [Misc]
 
